examples/test/testpolicy10455.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10455
  namespace: namespace314
spec:
  podSelector:
    matchLabels:
      key23: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value36
      podSelector:
        matchLabels:
          key21: value38
          key48: value14
          key39: value16
